TAPI avoid NPE reading supportive service
Change-Id: I588053b3fd04a2e0939e092baf186e17a309a12f
Signed-off-by: Joakim Törnqvist <joakim.tornqvist@smartoptics.com>